// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Card > should match the snapshot - clickable 1`] = `
<div
  class="nhsuk-card nhsuk-card--clickable"
  data-testid="card"
>
  <div
    class="nhsuk-card__content"
  >
    <h2
      class="nhsuk-card__heading nhsuk-heading-m"
    >
      <a
        class="nhsuk-card__link"
        href="#care-support"
      >
        Card heading
      </a>
    </h2>
    <p
      class="nhsuk-card__description"
    >
      Card description
    </p>
  </div>
</div>
`;

exports[`Card > should match the snapshot - image and clickable 1`] = `
<div
  class="nhsuk-card nhsuk-card--clickable"
  data-testid="card"
>
  <img
    alt="A lady smiling"
    class="nhsuk-card__img"
    src="https://assets.nhs.uk/prod/images/A_0218_exercise-main_FKW1X7.width-690.jpg"
  />
  <div
    class="nhsuk-card__content"
  >
    <h2
      class="nhsuk-card__heading nhsuk-heading-m"
    >
      Card heading
    </h2>
    <p
      class="nhsuk-card__description"
    >
      Card description
    </p>
  </div>
</div>
`;

exports[`Card > should match the snapshot - primary & withChevron 1`] = `
<div
  class="nhsuk-card"
  data-testid="card"
>
  <div
    class="nhsuk-card__content nhsuk-card__content--primary"
  >
    <h2
      class="nhsuk-card__heading nhsuk-heading-m"
    >
      Card heading
    </h2>
    <p
      class="nhsuk-card__description"
    >
      Card description
    </p>
    <svg
      aria-hidden="true"
      class="nhsuk-icon nhsuk-icon__chevron-right-circle"
      focusable="false"
      height="27"
      width="27"
      xmlns="http://www.w3.org/2000/svg"
    >
      <circle
        cx="13.333"
        cy="13.333"
        fill=""
        r="13.333"
      />
      <g
        data-name="Group 1"
        fill="none"
        stroke="#fff"
        stroke-linecap="round"
        stroke-miterlimit="10"
        stroke-width="2.667"
      >
        <path
          d="M15.438 13l-3.771 3.771"
        />
        <path
          d="M11.667 9.229L15.438 13"
          data-name="Path"
        />
      </g>
    </svg>
  </div>
</div>
`;

exports[`Card > should match the snapshot - primary 1`] = `
<div
  class="nhsuk-card"
  data-testid="card"
>
  <div
    class="nhsuk-card__content nhsuk-card__content--primary"
  >
    <h2
      class="nhsuk-card__heading nhsuk-heading-m"
    >
      Card heading
    </h2>
    <p
      class="nhsuk-card__description"
    >
      Card description
    </p>
  </div>
</div>
`;

exports[`Card > should match the snapshot - secondary 1`] = `
<div
  class="nhsuk-card nhsuk-card--secondary"
  data-testid="card"
>
  <div
    class="nhsuk-card__content nhsuk-card__content--secondary"
  >
    <h2
      class="nhsuk-card__heading nhsuk-heading-m"
    >
      Card heading
    </h2>
    <p
      class="nhsuk-card__description"
    >
      Card description
    </p>
  </div>
</div>
`;

exports[`Card > should match the snapshot - width one-half 1`] = `
<ul
  class="nhsuk-grid-row nhsuk-card-group"
  data-testid="card"
>
  <li
    class="nhsuk-card-group__item nhsuk-grid-column-one-half"
  >
    <div
      class="nhsuk-card"
    >
      <div
        class="nhsuk-card__content"
      >
        <h2
          class="nhsuk-card__heading nhsuk-heading-m"
        >
          Card heading
        </h2>
        <p
          class="nhsuk-card__description"
        >
          Card description
        </p>
      </div>
    </div>
  </li>
</ul>
`;

exports[`Card > should match the snapshot - width one-quarter 1`] = `
<ul
  class="nhsuk-grid-row nhsuk-card-group"
  data-testid="card"
>
  <li
    class="nhsuk-card-group__item nhsuk-grid-column-one-quarter"
  >
    <div
      class="nhsuk-card"
    >
      <div
        class="nhsuk-card__content"
      >
        <h2
          class="nhsuk-card__heading nhsuk-heading-m"
        >
          Card heading
        </h2>
        <p
          class="nhsuk-card__description"
        >
          Card description
        </p>
      </div>
    </div>
  </li>
</ul>
`;

exports[`Card > should match the snapshot - width one-third 1`] = `
<ul
  class="nhsuk-grid-row nhsuk-card-group"
  data-testid="card"
>
  <li
    class="nhsuk-card-group__item nhsuk-grid-column-one-third"
  >
    <div
      class="nhsuk-card"
    >
      <div
        class="nhsuk-card__content"
      >
        <h2
          class="nhsuk-card__heading nhsuk-heading-m"
        >
          Card heading
        </h2>
        <p
          class="nhsuk-card__description"
        >
          Card description
        </p>
      </div>
    </div>
  </li>
</ul>
`;

exports[`Card > should match the snapshot - width undefined 1`] = `
<ul
  class="nhsuk-grid-row nhsuk-card-group"
  data-testid="card"
>
  <li
    class="nhsuk-card-group__item nhsuk-grid-column-one-half"
  >
    <div
      class="nhsuk-card"
    >
      <div
        class="nhsuk-card__content"
      >
        <h2
          class="nhsuk-card__heading nhsuk-heading-m"
        >
          Card heading
        </h2>
        <p
          class="nhsuk-card__description"
        >
          Card description
        </p>
      </div>
    </div>
  </li>
</ul>
`;

exports[`Card > should match the snapshot 1`] = `
<div
  class="nhsuk-card"
  data-testid="card"
>
  <div
    class="nhsuk-card__content"
  >
    <h2
      class="nhsuk-card__heading nhsuk-heading-m"
    >
      Card heading
    </h2>
    <p
      class="nhsuk-card__description"
    >
      Card description
    </p>
  </div>
</div>
`;
